# name: TestEvents.test_event_property_values
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND JSONHas(properties, 'random_prop')
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%qw%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%QW%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '')
  FROM events
  WHERE team_id = 2
    AND replaceRegexpAll(JSONExtractRaw(properties, 'random_prop'), '^"|"$', '') ILIKE '%6%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND JSONHas(properties, 'random_prop')
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND "mat_random_prop" ILIKE '%qw%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND "mat_random_prop" ILIKE '%QW%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_event_property_values_materialized.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT "mat_random_prop"
  FROM events
  WHERE team_id = 2
    AND "mat_random_prop" ILIKE '%6%'
    AND timestamp >= '2020-01-13 00:00:00'
    AND timestamp <= '2020-01-20 23:59:59'
  LIMIT 10
  '
---
# name: TestEvents.test_hogql_property_filter
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'foo'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'foo'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter.4
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'a%sd'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter.5
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'a%sd'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter.6
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), 'test_val2'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter.7
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         'a%sd',
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), 'test_val2'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'foo'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'foo'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized.4
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'a%sd'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized.5
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals('a%sd', 'a%sd'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized.6
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals("mat_key", 'test_val2'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_hogql_property_filter_materialized.7
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         "mat_key",
         'a%sd',
         concat(event, ' ', "mat_key")
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND (equals("mat_key", 'test_val2'))
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT event,
         distinct_id,
         replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''),
         concat(event, ' ', replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''))
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT tuple(uuid, event, properties, timestamp, team_id, distinct_id, elements_chain, created_at, person_id, person_created_at, person_properties),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY timestamp DESC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT tuple(uuid, event, properties, timestamp, team_id, distinct_id, elements_chain, created_at, person_id, person_created_at, person_properties),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  ORDER BY timestamp DESC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.4
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
  GROUP BY event
  ORDER BY count(*) DESC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.5
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
  GROUP BY event
  ORDER BY count(*) DESC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.6
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp > '2020-01-09 12:14:00.000000'
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND or(equals(event, 'sign up'), like(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), '%val2'))
  GROUP BY event
  ORDER BY count(*) DESC, event ASC
  LIMIT 101
  '
---
# name: TestEvents.test_select_hogql_expressions.7
  '
  /* user_id:0 request:_snapshot_ */
  SELECT count(*),
         event
  FROM events
  WHERE team_id = 2
    AND timestamp < '2020-01-10 12:14:05.000000'
    AND or(equals(event, 'sign up'), like(replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', ''), '%val2'))
  GROUP BY event
  ORDER BY count(*) DESC, event ASC
  LIMIT 101
  '
---
